# FullStack-Python

./: README.md  hello.txt  pyproject.toml
module_1.py/: logging_example.py
module_1.py/design_pattern/: abstract_factory.py  adapter.py  command.py  facade.py  factory_method.py  observer.py  proxy.py  singletone.py
module_1.py/solid/D/: finish.py  start.py
module_1.py/solid/I/: finish.py  start.py
module_1.py/solid/L/: agregation.py  composition.py  finish.py  start.py
module_1.py/solid/O/: after.py  before.py
module_1.py/solid/S/: after.py  before.py
module_1.py/typing/: 1.py  2.py  3.py  4.py  5.py  in.py
module_3.py/http_server/: main.py
module_4.py/: aiofile_ex.py  aiofile_ex_read2.py  async_ex6_add_done_callback.py  async_ex7_gather.py  async_ex8_wait.py  requests_async.py  requests_sync.py
module_4.py/aiohttp/: ex_2.py  ex_3.py  ex_4.py  ex_5.py
module_5/: core_example.py  example.db  example_ex.db  example_relation.db  loading_example.py  session_example.py
module_5/PEP249/: connect.py  create_table.py  seed.py  select.py  test.db  update.py
module_5/Session_select_join_example/: example.db  execute_example.py  main.py  models.py  seed.py
module_6/practice_migrations/: Makefile  main.py  pyproject.toml  test.db
module_6/practice_migrations/api/: crud.py
module_6/pydantic/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py
module_7/: .gitignore  main.py  pyproject.toml
module_7/api/: app.py  config.py  dependencies.py  routes.py
module_8/fastapi_auth/: pyproject.toml
solution/: pyproject.toml
(+16 files in other folders)
